--- a/index.html
+++ b/index.html
@@ -177,7 +177,15 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Bootstrap</h3>
+                                    <h3 class="skills__name">Javascript</h3>
+                                    <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">Git/Github</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
@@ -197,7 +205,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Git/Github</h3>
+                                    <h3 class="skills__name">Bootstrap</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
