linked, resume  updated

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3 class="home__education">Web Developer</h3>
 
                     <div class="home__button">
-                        <a download="" href="assets/pdf/nithish_resume.pdf" class="button button--ghost">
+                        <a download="" href="assets/pdf/nithish_kumar_resume.pdf" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -303,7 +303,7 @@
 
                     <h3 class="work__title">TO-DO List App</h3>
 
-                    <a href="https://github.com/Nithish-1310/to_do_list_django" class="work__button">
+                    <a href="https://to-do-list-django-9bzg.onrender.com/" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
