--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3 class="home__education">Web Developer</h3>
 
                     <div class="home__button">
-                        <a download="" href="assets/pdf/nithish_kumar_resume.pdf" class="button button--ghost">
+                        <a download="" href="assets/pdf/Nithish_Kumar_resume.pdf" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -137,7 +137,7 @@
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Completed</h3>
-                            <span class="about__subtitle">4+ Projects</span>
+                            <span class="about__subtitle">4 Projects</span>
                         </div>
                         
                     </div>
@@ -185,6 +185,14 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
+                                    <h3 class="skills__name">React</h3>
+                                    <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
                                     <h3 class="skills__name">Git/Github</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
@@ -206,6 +214,14 @@
 
                                 <div>
                                     <h3 class="skills__name">Bootstrap</h3>
+                                    <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">Material UI</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
@@ -236,6 +252,14 @@
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">ORM</h3>
+                                    <span class="skills__level">Intermediate</span>
+                                </div>
+                            </div>
 
 
                         </div>
@@ -248,16 +272,15 @@
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
-
-
                             <div class="skills__data">
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">ORM</h3>
+                                    <h3 class="skills__name">Firebase</h3>
                                     <span class="skills__level">Intermediate</span>
                                 </div>
                             </div>
+
 
                         </div>
                     </div>
@@ -321,11 +344,11 @@
             
 
                 <div class="work__card mix web">
-                    <img src="assets/img/travello.jpg" alt="" class="work__img">
+                    <img src="assets/img/estimate_form.png" alt="" class="work__img">
 
-                    <h3 class="work__title">Travello</h3>
+                    <h3 class="work__title">Estimate Form Manager</h3>
 
-                    <a href="https://github.com/Nithish-1310/travello_django" class="work__button">
+                    <a href="https://estimate-form-647c5.web.app/" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
