--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <span class="section__subtitle">My Intro</span>
             <h2 class="section__title">About Me</h2>
 
-            git clone            <div class="about__container container grid">
+            <div class="about__container container grid">
                 <img src="assets/img/nithish_pic.jpg" alt="" class="about__img">
 
                 <div class="about__data">
